welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value NbPas
					nbPas=NbPas+1}
                                              ^Program:5: error: not found: value n
for (nbPas <- 1 to n) {recule()}
                   ^