welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas:Int = 0
while (!estSurBiscuit) {avance()
					nbPas=NbPas+1}
for (nbPas <- 1 to n) {recule()}
poseBiscuit()